--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "ramsey/uuid": "^4.7",
         "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
