--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,15 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
+        "barryvdh/laravel-snappy": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "kalnoy/nestedset": "^6.0",
+        "knplabs/knp-snappy": "^1.5",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "mpdf/mpdf": "^8.2",
         "ramsey/uuid": "^4.7",
         "realrashid/sweet-alert": "^7.1",
         "yajra/laravel-datatables-oracle": "^10.11"
