--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.4",
         "maatwebsite/excel": "^3.1",
         "mpdf/mpdf": "^8.2",
         "ramsey/uuid": "^4.7",
