progress debug user verification error

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "barryvdh/laravel-snappy": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
+        "haruncpi/laravel-id-generator": "^1.1",
         "intervention/image": "^2.7",
         "itsgoingd/clockwork": "^5.2",
         "kalnoy/nestedset": "^6.0",
